--- a/client/styles.css
+++ b/client/styles.css
@@ -6,6 +6,7 @@ h1 {
 
 .editable{
   border: 1px dashed #ddd;
+  padding: 7px;
 }
 
 textarea{
@@ -34,10 +35,31 @@ accordion-group .panel-heading{
 
 .topic-pane {
   min-height: 120px;
+  font-style: normal;  
 }
 
 .topics{
   margin-top:10px;
+}
+
+.cell-query{
+  margin-bottom: 20px;
+  border: 1px dotted #aaa;
+  padding: 10px 0;
+}
+
+.query{
+  background-color: #e5ffd0;
+  padding: 10px;
+}
+
+.cell-output {
+  background-color: #e5ffd0;
+  max-height: 400px;
+  width:100%;
+  overflow-x: auto;
+  overflow-y: auto;
+  border: 1px solid black;
 }
 
 
@@ -56,7 +78,6 @@ accordion-group .panel-heading{
 .cell-query pre.editable{
 	font-family: "Courier New", Courier, "Lucida Sans Typewriter", "Lucida Typewriter", monospace !important;
 }
-
 
 pre.editable{
   font-style: normal;
