--- a/client/styles.css
+++ b/client/styles.css
@@ -1,7 +1,5 @@
-h1 {
-  color: #369;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 250%;
+h1 .navbar-brand {
+  font-size: 28px;
 }
 
 .editable{
